# computational_intelligence_proj

./: .gitignore  README.md  pyproject.toml
mlp/: efficiency_test_of_mlp.ipynb  fine_tuning.ipynb
rbf/: rbf_fine_tuning.ipynb  rbf_regression.ipynb
