[tool.poetry]
name = "computational-intelligence-proj"
version = "0.1.0"
description = ""
authors = ["condesancho <arailosb@gmail.com>"]
readme = "README.md"
packages = [{include = "computational_intelligence_proj"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
jupyter = "^1.0.0"
matplotlib = "^3.6.0"
sklearn = "^0.0"
tensorflow = "2.9.2"
keras = ">=2.9.0,<2.10.0"
keras-tuner = "^1.1.3"
tensorflow-addons = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
